<resources>
    <string name="app_name">Flickr</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <string-array name="navigation_drawer_items_array">
        <item>WishList</item>
        <item>WatchList</item>
        <item>Favorite</item>
        <item>Rating</item>
    </string-array>

    <!-- ******Navbar String********** -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_wishlist">WishList</string>
    <string name="nav_watchlist">WatchList</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_rating">Rating</string>
    <string name="nav_sign_out">Sign Out</string>
    <!-- ******************************* -->


    <string name="user_name"></string>
    <string name="user_id"></string>
    <string name="user_email"></string>
    <string name="user_imgUrl"></string>
    <string name="nav_friends">Friends</string>

    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>

</resources>
